unpackaged/main/default/objects/asp04__Refund__c/asp04__Refund__c.object-meta.xml
<CustomObject>
    <label>Refund</label>
    <nameField>
        <displayFormat>RF-{000000000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>