unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__Amount__c.field-meta.xml
<CustomField>
    <fullName>asp04__Amount__c</fullName>
    <inlineHelpText>The currency value of the refund</inlineHelpText>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>