unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__Payment__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>asp04__Payment__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>