unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Date__c</fullName>
    <inlineHelpText>The date on which the refund was processed</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>