unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__Payment_Route__c.field-meta.xml
<CustomField>
    <fullName>asp04__Payment_Route__c</fullName>
    <inlineHelpText>The payment route used for this refund</inlineHelpText>
    <label>Payment Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>asp04__Payment_Route_Options</valueSetName>
    </valueSet>
</CustomField>