unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__PSP_Reference__c.field-meta.xml
<CustomField>
    <fullName>asp04__PSP_Reference__c</fullName>
    <inlineHelpText>A unique reference string to this refund transaction generated by the payment service provider</inlineHelpText>
    <label>Payment Service Provider Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>