unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__Refund_Stage__c.field-meta.xml
<CustomField>
    <fullName>asp04__Refund_Stage__c</fullName>
    <label>Refund Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
                <default>true</default>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Refunded to customer</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>