unpackaged/main/default/objects/asp04__Refund__c/fields/asp04__Refund_Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>asp04__Refund_Stage_Description__c</fullName>
    <inlineHelpText>Information about the current refund stage.</inlineHelpText>
    <label>Refund Stage Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>